<resources>
    <string name="app_name">Android_R</string>
    <string name="action_settings">Settings</string>
    <string name="scope_storage">分区存储</string>
    <string name="saf_scope_file_list">使用分区存储框架打开文件选择页面</string>
    <string name="saf_scope_create_file">使用分区存储框架创建文件</string>
    <string name="saf_scope_alert_file">使用分区存储框架修改文件</string>
    <string name="saf_scope_delete_file">使用分区存储框架删除文件</string>
    <string name="screen_adapter">屏幕适配</string>
    <string name="room_module">Room组件</string>
    <string name="kotlin_lambda">协程</string>
    <string name="saf">分区存储框架</string>
    <string name="arc">MS框架</string>
    <string name="file">File框架</string>
    <string name="webview">WebView滑动兼容</string>
    <string name="webview1">WebView滑动兼容1</string>
    <string name="flowLayout">FlowLayout</string>
    <string name="SkinActivity">插件化换肤</string>
    <string name="nestedScrollActivity">嵌套滑动</string>
    <string name="textViewActivity">自定义TextView</string>
    <string name="crateSAF">创建普通文件夹</string>
    <string name="insertImage">SD卡插入图片</string>
    <string name="queryImg">查询图片</string>
    <string name="updateImg">修改图片</string>
    <string name="deleteImg">删除图片</string>
    <string name="downloadImg">下载文件</string>
    <string name="createDir">使用架构创建文件夹</string>
    <string name="createFile">使用架构创建文件</string>
    <string name="queryFile">使用架构查询文件</string>
    <string name="deleteFile">使用架构删除文件</string>
    <string name="updateFile">使用架构更新文件</string>
    <string name="copyFile">使用架构复制文件</string>
    <string name="createImg">使用架构创建图片</string>
    <string name="queryImgSAF">使用架构查询图片</string>
    <string name="deleteImgSAF">使用架构删除图片</string>
    <string name="updateImgSAF">使用架构更新图片</string>
    <string name="copyImage">使用架构复制文件</string>
    <string name="toast">toast</string>
    <string name="topStr">欢迎来到NBA世界，Where amazing happens</string>
    <string name="contenttv">科比·比恩·布莱恩特（英语：Kobe Bean Bryant，1978年8月23日—2020年1月26日）是前美国职业篮球运动员，主打得分后卫位置。科比1996年直接从高中进入NBA，并效力洛杉矶湖人20年，被公认是史上最伟大球员之一[1][2][3][4]。科比替洛杉矶湖人赢得5座NBA总冠军，并入选18次全明星赛、15次NBA最佳阵容、12次NBA最佳防守阵容，以及票选为2008年NBA最有价值球员与2次NBA总决赛最有价值球员。科比共获得NBA得分王两次，并位居联盟生涯常规赛得分第四名和生涯季后赛得分第四名。
科比生于美国宾夕法尼亚州费城，有段时间成长于意大利。高中就读位于宾夕法尼亚州的劳尔梅里恩高中，在那里科比被公认为美国顶尖的高中篮球员，并于高中毕业后宣布参加1996年NBA选秀，被夏洛特黄蜂以第13顺位选中；接着黄蜂将他交易到湖人。新秀赛季，科比赢得1997年扣篮大赛而受到球迷的喜爱，并在第二个赛季入选NBA全明星赛。2000年至2002年，尽管科比与队友沙奎尔·奥尼尔之间发生分歧，两人仍带领湖人连续三届夺冠。2003年，科比被一名旅馆服务生指控性侵，因此向科比提出诉讼，但在该女子拒绝出庭作证后，撤销了对科比的诉讼。科比否认性侵指控，但承认有发生性接触，并为此公开道歉。
在湖人输掉2004年NBA总决赛之后，奥尼尔被球队交易，而科比成为球队的基石。2005–06和2006–07赛季，科比两度成为联盟得分王。2006年，他创下职业生涯最高的81分，在联盟历史上单场得分位居第二，仅次于1962年威尔特·张伯伦的100分。2009年和2010年，科比带领球队连续夺得两座冠军，并两次均获得总决赛最有价值球员。科比仍然是联盟顶尖球员之一，直到2013年他的阿基里斯腱断裂。尽管健康复原，但在接下来的两个赛季，他分别因膝盖和肩膀伤患而赛季报销。由于身体状态下滑，科比在2015-16赛季退役。
科比在34岁时，成为联盟历史上最年轻的30,000分先生。2010年2月1日，科比超越杰里·韦斯特成为湖人队史得分王。科比也是联盟历史上第一位至少出战20个赛季的后卫。他共入选18次全明星赛是有史以来第二多，同时也创下连续首发场数的记录。科比的四次全明星赛最有价值球员与鲍勃·佩蒂特并列联盟史上最多。2000年代中期，科比为自己的绰号取为“黑曼巴”（Black Mamba），并被大众广泛采用[5]。2008年和2012年夏季奥运会，科比以美国国家队成员身份获得两枚金牌。2018年，科比编剧及旁白配音的动画短片《亲爱的篮球》获得奥斯卡最佳动画短片奖。
2020年1月26日，科比搭乘私人直升机从奥兰治县飞往洛杉矶的途中，和他的二女儿吉安娜、大学棒球教练约翰·阿尔托贝利等共九人，于卡拉巴萨斯郊外山坡坠机遇难而逝世，享年41岁。随后举行一系列致敬与纪念活动，包括将全明星赛最有价值球员奖更名。</string>
</resources>
