<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloadImg"
        android:onClick="downloadFile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/createFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createFile"
        android:onClick="createFile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download" />

    <Button
        android:id="@+id/queryFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queryFile"
        android:onClick="queryFile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createFile" />

    <Button
        android:id="@+id/deleteFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteFile"
        android:onClick="deleteFile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/queryFile" />

    <Button
        android:id="@+id/updateFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateFile"
        android:onClick="updateFile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteFile" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateFile"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/comment_like_24_24"/>

    <Button
        android:id="@+id/createImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createImg"
        android:onClick="createImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <Button
        android:id="@+id/queryImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queryImgSAF"
        android:onClick="queryImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createImage" />

    <Button
        android:id="@+id/updateImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateImgSAF"
        android:onClick="updateImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/queryImage" />

    <Button
        android:id="@+id/deleteImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteImgSAF"
        android:onClick="deleteImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateImage" />

    <Button
        android:id="@+id/copyImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyImage"
        android:onClick="copyImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteImage" />

</androidx.constraintlayout.widget.ConstraintLayout>